--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,92 @@
 
-.App {
-  text-align: center;
+
+/* Extra small devices (phones, 600px and down) */
+.SubmitButton{
+  background: rgb(65, 65, 65);
+  border-radius: 36px;
+}
+@media only screen and (max-width: 600px) {
+  .container{
+    height: 100vh;
+    width: 100vw;
+    text-align: center;
+  }
+  .logo{
+  margin-top: 7vh;
+  height: 26vh;
+  margin-bottom: 10vh;
+  }
+  .form-control{
+    margin-bottom: 5vh;
+  }
+
+  .SubmitButton{
+    position: absolute;
+    width: 100vw;
+    bottom: 0;
+    left:0;
+    height: 6vh;
+    border-radius: 0px;
+  }
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .container{
+    text-align: center;
+    height: 100vh;
+    width: 100vw;
+  }
+
+  .logo{
+  margin-top: 7vh;
+  height: 26vh;
+  margin-bottom: 10vh;
+  }
+
+  .form-control{
+    margin-bottom: 5vh;
+  }
+
+  .SubmitButton{
+  height: 5vh;
+  width: 15vh;
+  }
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .container{
+    height: 100vh;
+    width: 100vw;
+  }
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-.App-intro {
-  font-size: large;
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .container{
+    height: 100vh;
+    width: 100vw;
+  }
+
+  .SubmitButton{
+    height: 4vh;
+    width: 19vh;
+    font-size: 1.6vh;
+  }
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .container{
+    height: 100vh;
+    width: 100vw;
+    text-align: center;
+  }
+  .form-control{
+    margin-bottom: 5vh;
+    height: 4vh;
+    width: 40vw;
+    margin-left: 7.8vh;
+  }
 }
