--- a/src/User.css
+++ b/src/User.css
@@ -50,3 +50,11 @@
   display: flex;
   justify-content: space-around;
 }
+
+.TableToolBar{
+display:flex;
+}
+
+.table-responsive{
+  max-height: 92vh;
+}
