fix some glitch after moving the panel to dataToTable

--- a/src/User.css
+++ b/src/User.css
@@ -13,13 +13,15 @@
 .checkboxInfo{
 
 }
-
+.panel-title{
+  display: flex;
+  justify-content: space-between;
+}
 .pannelContainer{
 
 }
 
 .dismissRight{
-  position: absolute;
   right: 2px;
   top: 3px;
   cursor: pointer;
