--- a/src/User.css
+++ b/src/User.css
@@ -61,10 +61,6 @@
   margin-left: 10px;
 }
 
-.infoText{
-  font-size: 14px;
-}
-
 .labelText{
   font-size: 14px;
   font-weight: 700;
@@ -103,4 +99,9 @@
 .usersPanel{
   height: none;
   width: none;
+}
+
+.emailInput{
+  margin-right: 12px;
+  font-size: 14px;
 }
