--- a/src/User.css
+++ b/src/User.css
@@ -6,7 +6,7 @@
 }
 
 .rightPanel{
-  height: 100vh;
+  height: 90vh;
   width: 30vw;
 }
 
@@ -104,4 +104,10 @@
 .emailInput{
   margin-right: 12px;
   font-size: 14px;
+}
+
+.emailInput.disabled{
+  margin-right: 12px;
+  font-size: 14px;
+  background: #e3e3e3;
 }
