Monitoring dev some cometic fix, for monitoring

--- a/src/User.css
+++ b/src/User.css
@@ -140,3 +140,15 @@
   overflow-y: auto;
   max-height: 30vh;
 }
+
+.Error{
+  color:black;
+}
+
+.Warning{
+  color:rgb(245, 153, 16);
+
+}
+.Log{
+  color:blue;
+}
