improve admin interface

--- a/src/User.css
+++ b/src/User.css
@@ -1,4 +1,12 @@
 /*User*/
+.loading{
+  height: stretch;
+  width: stretch;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: progress;
+}
 .rowSelected{
   background: #00E5E5;
   color: white !important;
@@ -12,6 +20,79 @@
 
 .trueBoolean{
   color:green;
+}
+@keyframes blink {
+    /**
+     * At the start of the animation the dot
+     * has an opacity of .2
+     */
+    0% {
+      opacity: .2;
+    }
+    /**
+     * At 20% the dot is fully visible and
+     * then fades out slowly
+     */
+    20% {
+      opacity: 1;
+    }
+    /**
+     * Until it reaches an opacity of .2 and
+     * the animation can start again
+     */
+    100% {
+      opacity: .2;
+    }
+}
+
+.loading span {
+      text-align: center;
+    /**
+     * Use the blink animation, which is defined above
+     */
+    animation-name: blink;
+    /**
+     * The animation should take 1.4 seconds
+     */
+    animation-duration: 1.4s;
+    /**
+     * It will repeat itself forever
+     */
+    animation-iteration-count: infinite;
+    /**
+     * This makes sure that the starting style (opacity: .2)
+     * of the animation is applied before the animation starts.
+     * Otherwise we would see a short flash or would have
+     * to set the default styling of the dots to the same
+     * as the animation. Same applies for the ending styles.
+     */
+    animation-fill-mode: both;
+}
+.loadingText{
+  text-align: center;
+  font-size:x-large;
+}
+
+.loadingText span:nth-child(2) {
+    /**
+     * Starts the animation of the third dot
+     * with a delay of .2s, otherwise all dots
+     * would animate at the same time
+     */
+    animation-delay: .2s;
+}
+
+.page-header{
+  margin: 40px 49px 20px;
+}
+
+.loadingText span:nth-child(3) {
+    /**
+     * Starts the animation of the third dot
+     * with a delay of .4s, otherwise all dots
+     * would animate at the same time
+     */
+    animation-delay: .4s;
 }
 
 .falseBoolean{
@@ -80,8 +161,9 @@
 }
 
 .TableToolBar{
- margin-left:20px;
- margin-right:20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 20px;
 }
 
 .table-responsive{
@@ -117,6 +199,10 @@
 .inputValue{
   margin-right: 12px;
   font-size: 14px;
+}
+
+.logoRow{
+
 }
 
 .inputValue.disabled{
