add translation menu on connection fix a lot of language and display bugs

--- a/src/User.css
+++ b/src/User.css
@@ -12,6 +12,12 @@
   color: white !important;
 
 }
+
+.languageDropdown{
+    margin-top: 20px;
+    width: 130px;
+}
+
 .bottomButtons{
   margin: auto;
   width: 200px;
