--- a/src/User.css
+++ b/src/User.css
@@ -6,6 +6,8 @@
   align-items: center;
   justify-content: center;
   cursor: progress;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-style: italic;
 }
 .rowSelected{
   background: #00E5E5;
