--- a/src/User.css
+++ b/src/User.css
@@ -1,4 +1,14 @@
-/*User*/
+.loginForm {
+    max-width: 25em;
+}
+
+.logo {
+    width: 10em;
+    height: auto;
+    max-width: 80vw;
+    max-height: 30vh;
+}
+
 .loading {
     height: stretch;
     width: stretch;
@@ -9,14 +19,10 @@
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
     font-style: italic;
 }
+
 .rowSelected {
     background: #00e5e5;
     color: white !important;
-}
-
-.languageDropdown {
-    margin-top: 20px;
-    width: 130px;
 }
 
 .bottomButtons {
@@ -24,6 +30,7 @@
     width: 200px;
     margin-bottom: 10px;
 }
+
 .rightPanel {
     height: 90vh;
     width: 30vw;
@@ -79,6 +86,7 @@
      */
     animation-fill-mode: both;
 }
+
 .loadingText {
     text-align: center;
     font-size: x-large;
@@ -120,9 +128,13 @@
     margin-right: 20px;
 }
 
-.panel-title {
+.card-header.header-with-button {
     display: flex;
     justify-content: space-between;
+}
+
+.fas {
+    line-height: inherit;
 }
 
 .statsPanelContent {
@@ -144,18 +156,12 @@
 }
 
 .dismissRight {
-    right: 2px;
-    top: 3px;
     cursor: pointer;
 }
 
 .email.form-group {
     display: flex;
     align-items: baseline;
-}
-
-.form-control {
-    margin-left: 10px;
 }
 
 .labelText {
@@ -170,7 +176,7 @@
 }
 
 .ActivationButton {
-    width: 250px;
+    width: 300px;
     margin-bottom: 10px;
 }
 
@@ -197,6 +203,7 @@
     display: flex;
     margin-top: 2vh;
 }
+
 .checkboxfilter label {
     margin-left: 4px;
 }
@@ -204,6 +211,7 @@
 .checkboxfilter input {
     margin-left: 2px;
 }
+
 .usersPanel {
     height: none;
     width: none;
@@ -251,6 +259,7 @@
 .Warning {
     color: rgb(245, 153, 16);
 }
+
 .Log {
     color: blue;
 }
