--- a/src/User.css
+++ b/src/User.css
@@ -1,3 +1,21 @@
+.delayed {
+    animation: 0s linear 0.5s forwards makeVisible;
+    visibility: hidden;
+}
+
+@keyframes makeVisible {
+    to {
+        visibility: visible;
+    }
+}
+
+.fullCentered {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .loginForm {
     max-width: 25em;
 }
@@ -7,6 +25,15 @@
     height: auto;
     max-width: 80vw;
     max-height: 30vh;
+}
+
+.loadingLoginButton {
+    display: flex;
+    align-items: center;
+}
+
+.loadingLoginText {
+    flex-grow: 1;
 }
 
 .loading {
