--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 #root {
-    width: 100vw;
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    max-width: 100vw;
+    max-height: 100vh;
 }
