--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 #root {
     display: flex;
     flex-direction: column;
-    max-width: 100vw;
+    height: 100vh;
     max-height: 100vh;
+    max-width: 100vw;
 }
