Watcha op330 dialog for user creation (#12)
* feat: add one i18n namespace per tab

* feat: add Watcha favicon

* feat: add NewItemButton component

* cmd: yarn add formik yup

* feat: wrap createUserRightPanel into NewItemModal component

* feat: add NewUserForm component

* feat: link new user form and watcha_register end point

* feat: add synapse administrator checkbox

* fix: remove retry requests on error

* fix: remove cancel requests onHide modal

* feat: add local echo for new user creation

* feat: reset feedback on alert click

* fix: remove diacritic in userId

* fix: add a margin before the spinner

* fix: convert userId to lower case

* Update build/run instruction in README.md

* fix: remove forbidden characters from userId

* fix: escape dash in regex class

* fix: remove useless credentials

* fix: typo

* refactor:
- remove useless optimization boilerplate
- use ref in useEffet for variables that are not denpencies
- add NexUserModal component
- disable submission while feedback
- reset form after validating feeback
- update i18n "accountStatus" key

* fix: restore creation date time in UserRightPanel

* refactor: add newUserLocalEcho()

Co-authored-by: Francois Granade <github.com@farialima.net>

--- a/src/App.css
+++ b/src/App.css
@@ -46,10 +46,6 @@
     align-items: center;
 }
 
-.loadingLoginText {
-    flex-grow: 1;
-}
-
 .searchBox {
     max-width: 20em;
 }
@@ -79,6 +75,11 @@
     height: 1.2em;
     margin-right: 0.5em;
     background-color: white;
+}
+
+.rightRoundedInput {
+    border-top-right-radius: 0.25rem !important;
+    border-bottom-right-radius: 0.25rem !important;
 }
 
 .tableTabBody {
