--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+#root {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    max-height: 100vh;
+    max-width: 100vw;
 }
