style: css style of card footer.

--- a/src/App.css
+++ b/src/App.css
@@ -300,8 +300,10 @@ td .inactive {
     background: grey;
 }
 
-.StatsTitle {
+.statsPanelFooter:hover{
     cursor: pointer;
+    background-color: darkturquoise;
+    text-decoration: underline;
 }
 
 .TableAdvanced {
